- rcfile.c:
  parse_rcfile()
	- Add missing brackets around an if statement block so that
	  parsing the numeric argument after "tabsize" works properly
	  again. (DLR, found by Mike Frysinger)
- winio.c:
  unget_kbinput()
	- New function used as a wrapper for ungetch(). (DLR)
  get_mouseinput()
	- Consolidate two if statements to increase efficiency. (DLR)
  do_yesno()
	- Don't bother assigning the value of get_mouseinput() to
	  anything.  Since allow_shortcuts is FALSE, its return value
	  will always be FALSE. (DLR)

GNU nano 1.3.4 - 2004.08.17
- General:
	- More minor comment cleanups. (DLR)
	- Convert more ints and functions using 0 and 1 to bools using
	  TRUE and FALSE. (David Benbennick and DLR)
	- Change more instances of ints that have large enough upper
	  bounds and which can never be negative to size_t's, and
	  convert nano to handle them properly. (DLR)
	- Convert the shortcut list functions and most related functions
	  to return void instead of int, as the return values of all
	  those functions are essentially unused.  Changes to
	  sc_init_one(), shortcut_init(), etc. (David Benbennick and
	  DLR)
	- Make flags and all variables meant to store the value of flags
	  longs for consistency. (David Benbennick)
	- Rename the TEMP_OPT flags to TEMP_FILE, as it's more 
	  descriptive. (DLR)
	- Remove unused global variable search_offscreen. (David
	  Benbennick)
	- Add new N_() macro to mark strings that aren't translated
	  immediately, and convert nano to use it in cases where the
	  translated string is stored in a const char*.  Changes
	  to sc_init_one(), print1opt(), help_init(), rcfile_error(),
	  do_credits(), etc. (David Benbennick)  DLR: Do this for
	  toggle_init_one() too.
	- Minor tweaks and clarifications to some option descriptions.
	  (DLR)
	- Overhaul the shortcut list and toggle list initialization
	  code for efficiency.  Changes to shortcut_init() and
	  toggle_init(). (David Benbennick)  DLR: Move "Cancel" to just